<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/oneLineMeetingLayout">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/design_main_recyclerview_imageview_color"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:scaleType="centerCrop"
        android:src="@color/green"
        android:layout_margin="16dp" />

    <TextView
        android:id="@+id/design_main_recyclerview_info_reunion"
        android:layout_width="264dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/design_main_recyclerview_imageview_color"
        android:text="Réunion A - 14h00 - Peach"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/design_main_recyclerview_email_reunion"
        android:layout_width="264dp"
        android:layout_height="20dp"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/design_main_recyclerview_imageview_color"
        android:text="maxime@lamzone.com, alex@lamzo..." />

    <ImageButton
        android:id="@+id/design_main_recyclerview_delete_reunion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@+id/design_main_recyclerview_info_reunion"
        android:background="@color/white"
        app:srcCompat="@android:drawable/ic_menu_delete"
        app:tint="@color/black" />

</RelativeLayout>