<resources>
    <string name="app_name">Maréu</string>
    <string name="form_title">Réunion</string>
    <string name="tv_pageTitle">Ajouter une nouvelle réunion</string>
    <string name="edt_hint_meetingSubject">Sujet de la réunion</string>
    <string name="tv_mistakeHint_meetingSubject">Le champ sujet de la réunion est nécessaire</string>
    <string name="tv_meetingDate">Date :</string>
    <string name="edt_hint_meetingDate">jour/mois/année</string>
    <string name="tv_hint_meetingDate">jj/mm/aaaa</string>
    <string name="tv_meetingHour">Heure :</string>
    <string name="edt_hint_meetingHour">heure:minute</string>
    <string name="tv_hint_meetingTime">hh:mm</string>
    <string name="tv_meetingPlace">Lieu :</string>
    <string-array name="spinner_meetingPlace">
        <item>Choisir salle</item>
        <item>Salle A</item>
        <item>Salle B</item>
        <item>Salle C</item>
        <item>Salle D</item>
        <item>Salle E</item>
        <item>Salle F</item>
        <item>Salle G</item>
        <item>Salle H</item>
        <item>Salle I</item>
        <item>Salle J</item>
    </string-array>
    <string name="tv_hint_meetingPlace">Ce champ est obligatoire</string>
    <string name="tv_meetingParticipants">Participants :</string>
    <string name="edt_hint_meetingParticipants">amandine@lamzone.com, luc@lamz...</string>
    <string name="tv_hint_meetingParticipants">Ajouter l\'adresse mail de chaque participants en les séparants par une virgule ou/et une espace. Chaque adresse doit contenir au moins 3 caractères!</string>
    <string name="btn_validate">Valider</string>
    <string name="add_meeting_success">Nouvelle réunion ajoutée avec succès</string>
    <string name="add_meeting_failure">Echec d\'ajout de réunion!</string>
    <string name="delete_meeting_title">Supprimer Réunion !</string>
    <string name="delete_meeting_message">Voulez-vous vraiment supprimer cette réunion ?</string>
    <string name="delete_meeting_positive_button">Oui</string>
    <string name="delete_meeting_negative_button">Non</string>
    <string name="tv_edit_meeting_title">Modifier la réunion</string>
    <string name="menu">Filtrage</string>
    <string name="menu_filtering">Filtrer par date ou par lieu</string>
    <string name="spinner_place">Salle</string>
</resources>